--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <header id="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
                 <a class="navbar-brand" href="#">
@@ -47,6 +47,14 @@
             </div>
         </nav>
     </header>
+    
+    <footer class="footer-custom bg-gris">
+        <div>
+            <img class="footer-custom__logo--size" src="assets/images/logo-sin-texto.jpg" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+            <p>Iván Siemienczuk Arquitectura</p>
+            <p><a href="pages/contacto.html">Contacto</a> | <a href="pages/sites-map.html">Mapa del sitio</a> | <a href="#header">Ir arriba</a></p>
+        </div>
+    </footer>
     <!-- Javascript para Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
