Add carousel to index.html, add static caption on carousel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="container-fluid">
                 <!-- Logo con link a home -->
                 <a class="navbar-brand" href="#">
-                    <img class="header__logo" src="assets/images/logo-con-texto.png" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+                    <img class="header__logo" src="assets/images/logo-con-texto.png"
+                        alt="logo del estudio Ivan Siemienczuk Arquitectura">
                 </a>
                 <!-- Fin logo con link a home -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -47,12 +48,38 @@
             </div>
         </nav>
     </header>
-    
+    <!-- Carousel de Inicio -->
+    <div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/viviendas-unifamiliares/casa-rossi-1.jpg" class="carousel-custom-size"
+                        alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/joyeria-lingote-1.jpg" class="carousel-custom-size" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/caefe-1.jpg" class="carousel-custom-size" alt="...">
+                </div>
+            </div>
+            <div class="titulo-carousel">
+                <div class="col-md-12 text-center">
+                    <h1>Arquitectura Siemienczuk</h1>
+                    <h3>Sabemos cómo realizar un proyecto a su medida</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fin Carousel de Inicio -->
+
     <footer class="footer-custom bg-gris">
         <div>
-            <img class="footer-custom__logo--size" src="assets/images/logo-sin-texto.jpg" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+            <img class="footer-custom__logo--size" src="assets/images/logo-sin-texto.jpg"
+                alt="logo del estudio Ivan Siemienczuk Arquitectura">
             <p>Iván Siemienczuk Arquitectura</p>
-            <p><a href="pages/contacto.html">Contacto</a> | <a href="pages/sites-map.html">Mapa del sitio</a> | <a href="#header">Ir arriba</a></p>
+            <p><a href="pages/contacto.html">Contacto</a> | <a href="pages/sites-map.html">Mapa del sitio</a> | <a
+                    href="#header">Ir arriba</a></p>
         </div>
     </footer>
     <!-- Javascript para Bootstrap -->
