--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light header--custom-height">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
                 <a class="navbar-brand" href="#">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="titulo-carousel">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-left">
                     <h1>Arquitectura Siemienczuk</h1>
                     <h3>Sabemos cómo realizar un proyecto a su medida</h3>
                 </div>
