--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light header--custom-height">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
                 <a class="navbar-brand" href="#">
@@ -50,7 +50,7 @@
     </header>
     <!-- Carousel de Inicio -->
     <div>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide inner-shadow" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="assets/images/viviendas-unifamiliares/casa-rossi-1.jpg" class="carousel-custom-size"
@@ -72,7 +72,15 @@
         </div>
     </div>
     <!-- Fin Carousel de Inicio -->
-
+    <!-- Contenido Principal de Home -->
+    <main class="contenido-home bg-gris-mine-shaft-opacity-3">
+        <div>
+            <h2>Transformamos cada espacio</h2>
+            <h4>Somos un estudio fundado en 1998, desarrollamos un amplio rango de trabajos.</h4>
+        </div>
+        <img src="assets/images/caefe-1.jpg" alt="">
+    </main>
+    <!-- Fin Contenido Principal de Home -->
     <footer class="footer-custom bg-gris">
         <div>
             <img class="footer-custom__logo--size" src="assets/images/logo-sin-texto.jpg"
