--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,11 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Ofrecemos todo tipo de servicios para la construccion">
+    <meta name="keywords" content="arquitectura, diseño, albañileria, carpinteria, pintura">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquitectura Siemienczuk | Servicios</title>
     <!-- Hoja de estilo -->
     <link rel="stylesheet" href="../css/main.css">
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -28,19 +36,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Estudio</a>
+                            <a class="nav-link" href="estudio.html">Estudio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +59,9 @@
     <main>
         <section id="servicios">
             <h2 class="titulo-servicios color-gris-mine-shaft">Servicios profesionales</h2>
-            <p>Nos diferenciamos del resto de los estudios de arquitectura por nuestro especial énfasis en la calidad del diseño, la atención personalizada y asesoramiento en cada momento de la construcción desde la compra del terreno hasta la entrega de la llave de su obra.</p>
+            <p>Nos diferenciamos del resto de los estudios de arquitectura por nuestro especial énfasis en la calidad
+                del diseño, la atención personalizada y asesoramiento en cada momento de la construcción desde la compra
+                del terreno hasta la entrega de la llave de su obra.</p>
         </section>
         <div class="grilla-servicios">
             <!-- Carpinteria -->
@@ -65,7 +75,7 @@
                                 <path d="M190,343.2l-48-48c-4.8-4.8-10.4-6.4-17.6-6.4c-10.4,0-21.6,5.6-30.4,13.6c-15.2,15.2-18.4,36-7.2,47.2l48,48
                                 c4.8,4.8,10.4,6.4,17.6,6.4c10.4,0,21.6-5.6,30.4-13.6C198,375.2,201.2,354.4,190,343.2z M170,378.4c-6.4,6.4-12.8,8.8-17.6,8.8
                                 c-1.6,0-3.2,0-4.8-1.6l-48-48c-3.2-3.2-1.6-13.6,7.2-22.4c6.4-6.4,12.8-8.8,17.6-8.8c1.6,0,3.2,0,4.8,1.6l48,48
-                                C180.4,359.2,178.8,368.8,170,378.4z"/>
+                                C180.4,359.2,178.8,368.8,170,378.4z" />
                             </g>
                         </g>
                         <g>
@@ -78,12 +88,13 @@
                                 c0-0.8,0-2.4,0.8-3.2L146,235.2l1.6-1.6c0.8-0.8,1.6-1.6,3.2-1.6h0.8l70.4,70.4C247.6,328,236.4,350.4,222,364.8z M386,112
                                 c-4.8,0-8.8,4.8-8,9.6l3.2,42.4l-28-0.8c-4.8,0-8.8,4-9.6,8.8c0,1.6,4,44,4,44s-28.8-1.6-29.6-1.6c-4.8,0-8.8,4.8-8,9.6l3.2,42.4
                                 l-31.2-0.8c-4.8,0-8.8,4.8-8,9.6l3.2,42.4l-22.4-0.8c-3.2-8.8-8.8-17.6-17.6-27.2l-70.4-70.4c-0.8-0.8-0.8-0.8-1.6-1.6l195.2-196
-                                l52.8,52.8l3.2,39.2C416.4,113.6,387.6,112,386,112z"/>
+                                l52.8,52.8l3.2,39.2C416.4,113.6,387.6,112,386,112z" />
                             </g>
                         </g>
                         <g>
                             <g>
-                                <path d="M359.6,47.2c-15.2,0-27.2,12-27.2,27.2c0.8,14.4,12.8,27.2,27.2,27.2c15.2,0,27.2-12,27.2-27.2S374.8,47.2,359.6,47.2z
+                                <path
+                                    d="M359.6,47.2c-15.2,0-27.2,12-27.2,27.2c0.8,14.4,12.8,27.2,27.2,27.2c15.2,0,27.2-12,27.2-27.2S374.8,47.2,359.6,47.2z
 			                    M359.6,83.2c-4.8,0-8.8-4-8.8-8.8c0-4.8,4-8.8,8.8-8.8c4.8,0,8.8,4,8.8,8.8S364.4,83.2,359.6,83.2z" />
                             </g>
                         </g>
@@ -95,8 +106,8 @@
             <!-- Albañilería -->
             <section id="albanileria">
                 <div class="grilla-servicios__icon--bg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
-                        fill="currentColor" class="bi bi-hammer" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+                        class="bi bi-hammer" viewBox="0 0 16 16">
                         <path
                             d="M9.972 2.508a.5.5 0 0 0-.16-.556l-.178-.129a5.009 5.009 0 0 0-2.076-.783C6.215.862 4.504 1.229 2.84 3.133H1.786a.5.5 0 0 0-.354.147L.146 4.567a.5.5 0 0 0 0 .706l2.571 2.579a.5.5 0 0 0 .708 0l1.286-1.29a.5.5 0 0 0 .146-.353V5.57l8.387 8.873A.5.5 0 0 0 14 14.5l1.5-1.5a.5.5 0 0 0 .017-.689l-9.129-8.63c.747-.456 1.772-.839 3.112-.839a.5.5 0 0 0 .472-.334z" />
                     </svg>
@@ -114,7 +125,7 @@
                     </svg>
                 </div>
                 <h4>Electricidad</h4>
-                <p>Personal idóneo, para todo tipo de instalaciones eléctricas, y colocacion de luminarias tanto
+                <p>Personal idóneo para todo tipo de instalaciones eléctricas y colocacion de luminarias, tanto en
                     exterior como interior.</p>
             </section>
             <!-- Durlock -->
@@ -214,7 +225,7 @@
                         <li>Finales de obra</li>
                         <li>Ambientaciones</li>
                         <li>Equipamiento</li>
-                    </<ul>
+                        </<ul>
                 </div>
             </section>
         </div>
@@ -224,8 +235,8 @@
             <img class="footer-custom__logo--size" src="../assets/images/logo-sin-texto.jpg"
                 alt="logo del estudio Ivan Siemienczuk Arquitectura">
             <p>Iván Siemienczuk Arquitectura</p>
-            <p><a href="../pages/contacto.html">Contacto</a> | <a href="../pages/sites-map.html">Mapa del sitio</a> | <a
-                    href="#header">Ir arriba</a></p>
+            <p><a href="contacto.html">Contacto</a> | <a href="sites-map.html">Mapa del sitio</a> | <a href="#header">Ir
+                    arriba</a></p>
         </div>
     </footer>
     <!-- Javascript para Bootstrap -->
