--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Nos diferenciamos del resto de los estudios de arquitectura por nuestro especial énfasis en la calidad del diseño.">
+    <meta name="keywords" content="estudio, arquitectura, construccion, vivienda">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquitectura Siemienczuk</title>
     <!-- Hoja de estilo -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#header">
                     <img class="header__logo" src="assets/images/logo-con-texto.png"
                         alt="logo del estudio Ivan Siemienczuk Arquitectura">
                 </a>
@@ -31,16 +40,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Estudio</a>
+                            <a class="nav-link" href="pages/estudio.html">Estudio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="pages/proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -54,13 +63,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="assets/images/viviendas-unifamiliares/casa-rossi-1.jpg" class="carousel-custom-size"
-                        alt="...">
+                        alt="Fachada de Casa Rossi">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/joyeria-lingote-1.jpg" class="carousel-custom-size" alt="...">
+                    <img src="assets/images/joyeria-lingote-1.jpg" class="carousel-custom-size"
+                        alt="Interior de Joyería Lingote">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/caefe-1.jpg" class="carousel-custom-size" alt="...">
+                    <img src="assets/images/caefe-1.jpg" class="carousel-custom-size" alt="Interior de oficina Caefe">
                 </div>
             </div>
             <div class="titulo-carousel">
