--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Vias de contacto al estudio de arquitectura Iván Siemienczuk">
+    <meta name="keywords" content="horarios, redes, sociales, direccion">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquitectura Siemienczuk | Contacto</title>
     <!-- Hoja de estilo -->
     <link rel="stylesheet" href="../css/main.css">
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
-                <a class="navbar-brand" href="#">
-                    <img class="header__logo" src="../assets/images/logo-con-texto.png" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="header__logo" src="../assets/images/logo-con-texto.png"
+                        alt="logo del estudio Ivan Siemienczuk Arquitectura">
                 </a>
                 <!-- Fin logo con link a home -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -25,16 +36,16 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Estudio</a>
+                            <a class="nav-link" href="estudio.html">Estudio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
@@ -73,16 +84,18 @@
         <section>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d837.2137559308152!2d-60.73787557078192!3d-
                 32.92842839880792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b652c26b1fb841%3A0xbbb8d7f855a9e793!2
-                sArquitecto%20Iv%C3%A1n%20Siemienczuk!5e0!3m2!1ses-419!2sar!4v1623266625397!5m2!1ses-419!2sar" width="100%"
-                height="340" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                sArquitecto%20Iv%C3%A1n%20Siemienczuk!5e0!3m2!1ses-419!2sar!4v1623266625397!5m2!1ses-419!2sar"
+                width="100%" height="340" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
         <!-- Fin de mapa de Google Maps, formato iframe -->
     </main>
     <footer class="footer-custom bg-gris">
         <div>
-            <img class="footer-custom__logo--size" src="../assets/images/logo-sin-texto.jpg" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+            <img class="footer-custom__logo--size" src="../assets/images/logo-sin-texto.jpg"
+                alt="logo del estudio Ivan Siemienczuk Arquitectura">
             <p>Iván Siemienczuk Arquitectura</p>
-            <p><a href="pages/contacto.html">Contacto</a> | <a href="pages/sites-map.html">Mapa del sitio</a> | <a href="#header">Ir arriba</a></p>
+            <p><a href="#">Contacto</a> | <a href="sites-map.html">Mapa del sitio</a> | <a href="#header">Ir arriba</a>
+            </p>
         </div>
     </footer>
     <!-- Javascript para Bootstrap -->
@@ -91,4 +104,5 @@
     </script>
     <!-- Fin Javascript para Bootstrap -->
 </body>
+
 </html>
