--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Historia e informacion acerca del estudio de arquitectura Ivan Siemienczuk">
+    <meta name="keywords" content="estudio, arquitectura, rosario">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquitectura Siemienczuk</title>
     <!-- Hoja de estilo -->
     <link rel="stylesheet" href="../css/main.css">
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
-                <a class="navbar-brand" href="#">
-                    <img class="header__logo" src="../assets/images/logo-con-texto.png" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="header__logo" src="../assets/images/logo-con-texto.png"
+                        alt="logo del estudio Ivan Siemienczuk Arquitectura">
                 </a>
                 <!-- Fin logo con link a home -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -25,19 +36,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Estudio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -52,21 +63,25 @@
         <div class="contenido-estudio">
             <div>
                 <h4>Experiencia</h4>
-                <p>Somos una oficina de arquitectura formada en el año 1998, que promueve la integración entre distintas disciplinas y profesionales</p>
+                <p>Somos una oficina de arquitectura formada en el año 1998, que promueve la integración entre distintas
+                    disciplinas y profesionales</p>
             </div>
             <div>
                 <h4>Filosofía</h4>
-                <p>Nuestro estudio desarrolla un amplio rango de trabajos que incluye desde viviendas individuales, hasta edificios de usos mixtos, hoteles, edificios culturales, corporativos, institucionales, urbanizaciones y desarrollos inmobiliarios tanto en Rosario, como en el interior del país.</p>
+                <p>Nuestro estudio desarrolla un amplio rango de trabajos que incluye desde viviendas individuales,
+                    hasta edificios de usos mixtos, hoteles, edificios culturales, corporativos, institucionales,
+                    urbanizaciones y desarrollos inmobiliarios tanto en Rosario, como en el interior del país.</p>
             </div>
         </div>
-
     </main>
 
     <footer class="footer-custom bg-gris fixed-bottom">
         <div>
-            <img class="footer-custom__logo--size" src="../assets/images/logo-sin-texto.jpg" alt="logo del estudio Ivan Siemienczuk Arquitectura">
+            <img class="footer-custom__logo--size" src="../assets/images/logo-sin-texto.jpg"
+                alt="logo del estudio Ivan Siemienczuk Arquitectura">
             <p>Iván Siemienczuk Arquitectura</p>
-            <p><a href="pages/contacto.html">Contacto</a> | <a href="pages/sites-map.html">Mapa del sitio</a> | <a href="#header">Ir arriba</a></p>
+            <p><a href="contacto.html">Contacto</a> | <a href="sites-map.html">Mapa del sitio</a> | <a href="#header">Ir
+                    arriba</a></p>
         </div>
     </footer>
     <!-- Javascript para Bootstrap -->
@@ -75,4 +90,5 @@
     </script>
     <!-- Fin Javascript para Bootstrap -->
 </body>
+
 </html>
