--- a/pages/sites-map.html
+++ b/pages/sites-map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,20 @@
     <title>Arquitectura Siemienczuk | Mapa del Sitio</title>
     <!-- Hoja de Estilo -->
     <link rel="stylesheet" href="../css/main.css">
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header id="header">
         <nav class="navbar header--border-bottom navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <!-- Logo con link a home -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <img class="header__logo" src="../assets/images/logo-con-texto.png"
                         alt="logo del estudio Ivan Siemienczuk Arquitectura">
                 </a>
@@ -26,19 +34,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Estudio</a>
+                            <a class="nav-link" href="estudio.html">Estudio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -60,13 +68,13 @@
             <div class="contenido-mapa-del-sitio__lista">
                 <ul>
                     <li><a href="proyectos.html">Proyectos</a>
-                    <ul>
-                        <li><a href="proyectos/edificiospublicos.html">Edificios públicos</a></li>
-                        <li><a href="proyectos/localescomerciales.html">Locales comerciales</a></li>
-                        <li><a href="proyectos/oficinas.html">Oficinas</a></li>
-                        <li><a href="proyectos/viviendascolectivas.html">Viviendas colectivas</a></li>
-                        <li><a href="proyectos/viviendasunifamiliares.html">Viviendas unifamiliares</a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="proyectos/edificiospublicos.html">Edificios públicos</a></li>
+                            <li><a href="proyectos/localescomerciales.html">Locales comerciales</a></li>
+                            <li><a href="proyectos/oficinas.html">Oficinas</a></li>
+                            <li><a href="proyectos/viviendascolectivas.html">Viviendas colectivas</a></li>
+                            <li><a href="proyectos/viviendasunifamiliares.html">Viviendas unifamiliares</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -86,4 +94,5 @@
     </script>
     <!-- Fin Javascript para Bootstrap -->
 </body>
+
 </html>
